# wellplot

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: decision-log.md  library-workflow.md  mcp-authoring-plan.md  mcp-plan.md  package-rename-plan.md  production-readiness-plan.md  programmatic-api-plan.md  release-process.md  rendering-workings.md  requirements.txt  roadmap.md
docs/site/: concepts.md  getting-started.md  index.md  installation.md
docs/site/guides/: datasets.md  example-1-cbl-reconstruction.md  example-2-porosity-reconstruction.md  example-3-cbl-computed-numpy.md  example-4-porosity-computed-numpy.md  example-5-cbl-computed-pandas.md  example-6-porosity-computed-pandas.md  example-7-agent-las-step-by-step.md  examples.md
docs/site/reference/: index.md  logfile-yaml.md  mcp-api.md  python-api.md  report-pages.md
docs/site/workflows/: mcp-workflow.md  python-api.md  release-publishing.md  rendering.md  report-pages.md  yaml-workflow.md
examples/: annotation_track_objects_showcase.log.yaml  annotation_track_showcase.log.yaml  annotation_track_showcase_no_grid.log.yaml  api_dataset_alignment_demo.py  api_dataset_ingest_demo.py  api_dataset_merge_demo.py  api_end_to_end_demo.py  api_layout_render_demo.py  api_notebook_bytes_demo.py  api_partial_render_demo.py  api_serialize_demo.py  cbl_comparison_feet.log.yaml  cbl_comparison_feet_full.log.yaml  cbl_feature_showcase.log.yaml  cbl_feature_showcase_full.log.yaml  cbl_job_demo.log.yaml  cbl_log_example_attempt.log.yaml  cbl_main.log.yaml  cbl_report_pages.log.yaml  cbl_report_pages_open_hole.log.yaml  cbl_vdl_array_extreme_contrast.log.yaml  cbl_vdl_array_high_contrast.log.yaml  cbl_vdl_array_mvp.log.yaml  cbl_vdl_array_mvp_demo.py  cbl_vdl_array_overlay.log.yaml  curve_callout_bands_full.log.yaml  curve_callout_bands_showcase.log.yaml  curve_callouts_showcase.log.yaml  fill_modes_showcase.log.yaml  log_scale_options.log.yaml  mcp_natural_language_demo.py  mcp_workflow_demo.py  real_data_demo.py  reference_track_overlays.log.yaml  resistivity_scale_conventions.log.yaml  synthetic_demo.py  triple_combo.yaml
examples/notebooks/: README.md  annotation_track_objects_showcase.ipynb  annotation_track_showcase.ipynb  annotation_track_showcase_no_grid.ipynb  api_dataset_alignment_demo.ipynb  api_dataset_ingest_demo.ipynb  api_dataset_merge_demo.ipynb  api_end_to_end_demo.ipynb  api_layout_render_demo.ipynb  api_notebook_bytes_demo.ipynb  api_partial_render_demo.ipynb  api_serialize_demo.ipynb  cbl_comparison_feet.ipynb  cbl_comparison_feet_full.ipynb  cbl_feature_showcase.ipynb  cbl_feature_showcase_full.ipynb  cbl_job_demo.ipynb  cbl_log_example.ipynb  cbl_log_example_attempt.ipynb  cbl_main.ipynb  cbl_report_pages.ipynb  cbl_report_pages_open_hole.ipynb  cbl_vdl_array_extreme_contrast.ipynb  cbl_vdl_array_high_contrast.ipynb  cbl_vdl_array_mvp.ipynb  cbl_vdl_array_mvp_demo.ipynb  cbl_vdl_array_overlay.ipynb  curve_callout_bands_full.ipynb  curve_callout_bands_showcase.ipynb  curve_callouts_showcase.ipynb  fill_modes_showcase.ipynb  forge16b_porosity_example.ipynb  log_scale_options.ipynb  real_data_demo.ipynb  reference_track_overlays.ipynb  resistivity_scale_conventions.ipynb  synthetic_demo.ipynb  triple_combo.ipynb
examples/notebooks/developer/: README.md  annotation_track_objects_showcase.ipynb  annotation_track_showcase.ipynb  annotation_track_showcase_no_grid.ipynb  api_dataset_alignment_demo.ipynb  api_dataset_ingest_demo.ipynb  api_dataset_merge_demo.ipynb  api_end_to_end_demo.ipynb  api_layout_render_demo.ipynb  api_notebook_bytes_demo.ipynb  api_partial_render_demo.ipynb  api_serialize_demo.ipynb  cbl_comparison_feet.ipynb  cbl_comparison_feet_full.ipynb  cbl_feature_showcase.ipynb  cbl_feature_showcase_full.ipynb  cbl_job_demo.ipynb  cbl_log_example.ipynb  cbl_log_example_attempt.ipynb  cbl_main.ipynb  cbl_report_pages.ipynb  cbl_report_pages_open_hole.ipynb  cbl_vdl_array_extreme_contrast.ipynb  cbl_vdl_array_high_contrast.ipynb  cbl_vdl_array_mvp.ipynb  cbl_vdl_array_mvp_demo.ipynb  cbl_vdl_array_overlay.ipynb  curve_callout_bands_full.ipynb  curve_callout_bands_showcase.ipynb  curve_callouts_showcase.ipynb  fill_modes_showcase.ipynb  forge16b_porosity_example.ipynb  log_scale_options.ipynb  mcp_natural_language_demo.ipynb  mcp_workflow_demo.ipynb  real_data_demo.ipynb  reference_track_overlays.ipynb  resistivity_scale_conventions.ipynb  synthetic_demo.ipynb  triple_combo.ipynb
examples/notebooks/user/: README.md  agent_las_step_by_step.ipynb  cbl_log_example.ipynb  forge16b_porosity_example.ipynb
examples/production/: README.md
examples/production/cbl_log_example/: README.md  base.template.yaml  data-notes.md  full_reconstruction.log.yaml
examples/production/forge16b_porosity_example/: README.md  base.template.yaml  data-notes.md  full_reconstruction.log.yaml
scripts/: generate_example_notebooks.py  smoke_installed_wheel.py
src/well_log_os/: __init__.py  _version.py  cli.py  errors.py  layout.py  logfile.py  logfile_schema.py  pipeline.py  templates.py  units.py
src/well_log_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/well_log_os/api/: __init__.py  builder.py  dataset.py  render.py  serialize.py
src/well_log_os/io/: __init__.py  dlis.py  las.py
src/well_log_os/model/: __init__.py  channels.py  dataset.py  document.py
src/well_log_os/renderers/: __init__.py  base.py  matplotlib.py  matplotlib_defaults.yaml  plotly.py
src/wellplot/: __init__.py  cli.py  errors.py  logfile.py  logfile_schema.py  pipeline.py  templates.py  units.py
templates/: wireline_base.template.yaml
tests/: _mcp_fixtures.py  test_agent.py  test_api_dataset.py  test_api_render.py  test_api_serialize.py  test_cli.py  test_io_dlis.py  test_layout.py  test_logfile.py  test_matplotlib_style_defaults.py  test_mcp_server.py  test_mcp_service.py  test_model_data_validation.py  test_pipeline.py  test_public_api.py  test_templates.py  test_units.py
(+44 files in other folders)
