[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wellplot"
description = "Printable and interactive well-log display toolkit for LAS and DLIS data."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
license = "Apache-2.0"
authors = [
  {name = "Carlos Schrupp"},
]
keywords = [
  "well-log",
  "petrophysics",
  "las",
  "dlis",
  "visualization",
]
dependencies = [
  "jsonschema>=4.23",
  "matplotlib>=3.10.8",
  "numpy>=1.26",
  "PyYAML>=6.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/cschrupp/wellplot"
Documentation = "https://cschrupp.github.io/wellplot/"
Source = "https://github.com/cschrupp/wellplot"
Issues = "https://github.com/cschrupp/wellplot/issues"

[project.optional-dependencies]
las = [
  "lasio>=0.31",
  "welly>=0.5.2",
]
dlis = [
  "dlisio>=1.0",
]
pdf = [
  "matplotlib>=3.8",
]
interactive = [
  "plotly>=5.18",
]
pandas = [
  "pandas>=2.2",
]
units = [
  "pint>=0.24",
]
all = [
  "lasio>=0.31",
  "welly>=0.5.2",
  "dlisio>=1.0",
  "matplotlib>=3.8",
  "plotly>=5.18",
  "pandas>=2.2",
  "pint>=0.24",
]

[project.scripts]
wellplot = "wellplot.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.14",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "wellplot._version.__version__"}

[tool.setuptools.package-data]
"wellplot.renderers" = ["*.yaml"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "examples"]
extend-exclude = ["splice-main"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
  "ANN",
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "RET",
  "SIM",
  "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["wellplot"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
